@@ -1,3 +1,11 @@
+Wed Jan 15 12:50:34 2003  Jonathan Blandford  <jrb@redhat.com>
+
+	* main.c (cb_details_response): run "nautilus --no-desktop
+	fonts:///" if button pressed.
+
+	(cb_show_details): show a 'Go to font folder' button if fonts:///
+	exists.
+
 Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>
 
 	* Release 2.2.0.1
